The format is based on [Keep a Changelog](http://keepachangelog.com/) 
and this project adheres to [Semantic Versioning](http://semver.org/).
TODO
	see github log
	* redesigned flexpath
	* new version of adios

	0. use environment variable instead of preprocessor
	1. nnti in flexpath, not usable.
	2. dspaces hanging
	3. ENABLE_TESTING in flexpath conf, enabled
## Oct 8
	impi works, using bridges default
	i can also use more processes pernode

	
## Oct 2
#### fixing:
	1. comment out dataspaces locktype specification in adios_staging, as it
	does in adios staging example. (then type 1 lock will be used)
	2. use 2-d dimesions as in native dspaces?
	3. add timeout for adios_read_open, reader applications will try multiple
	times until stream is available.

	adios_dspaces with 1 server process: 230s
	adios_dimes with 1 server process: 155.54s
#### changed:
	now adios_staging use 4 server processes

## Oct 1 
	should try adios_staging skeletopn code
	1810216
		adios_staging with separate output
			consumer read is not performed

## Sep 29
	todo:
	adios_staging:
		Sep 27, else if fixed, but get blocked:
		check adios open mode, should it be opened in each step?(w in first step,
	and a in succeding steps, as in examples/staging/..genarray_stream)
## Sep 28
	todo
		adios_staging
		larger native_dimes

## Sep 27
	changes: 
		filename(scripts scripts and reader name
	fixing: adios reader initialization
## Sep 26
	dimes:
		sync before each step,
		also sync after the last step
		1798513: native dimes has 63.43 s for 100 steps!, fastest transport
## Sep 25
	changes:
		* add transports method, now differnet transport is chosen by
		Environment Variables.
	
	experiment:
		each node has 14 proccess
		
		56 nodes for producer
		28 nodes for consumer

## Sep 22
	in evpath_mpi/results/socket.log & evpath_mpi/results/enet.log
	enet also uses socket, I need to see how libsocket is implemented
	-------------------------------
	before meeting

